--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "source": "https://github.com/liquidlight/typo3-cc-routing"
     },
     "require": {
-        "typo3/cms-core": "^9.5 || ^10.4"
+        "typo3/cms-core": "^9.5 || ^10.4 || ^11.5"
     },
     "autoload": {
         "psr-4": {
