--- a/Documentation/Examples/config.yaml
+++ b/Documentation/Examples/config.yaml
@@ -11,7 +11,7 @@ routeEnhancers:
         type: CcPersistedPatternMapper
         tableName: 'tx_ccexample_item'
         routeFieldResult: '{title}-{location}'
-        routeFieldHandles: 'asciiTranslit,toLowerCase,specialCharsRemove,trim,filter'
+        routeFieldHandles: 'asciiTranslit,toLowerCase,specialCharsRemove,trim,filter,md5'
         filter: '/^(.{0,40})/'
 #        specialCharsRemoveSearch: '/[^a-zA-Z0-9_]+/'
 #        specialCharsRemoveReplace: '-'
