--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "source": "https://github.com/liquidlight/typo3-cc-routing"
     },
     "require": {
-        "typo3/cms-core": "^9.5 || ^10.4 || ^11.5"
+        "typo3/cms-core": "^11.5 || ^12.4"
     },
     "replace": {
         "typo3-ter/cc-routing": "self.version"
